Fixed navbar not filling on mobile

--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
+  width: 100vw;
   transition: 200ms ease-in;
 }
 
